# vw-quantum-vlam-challenge

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  demo.html  demo_3d.html  demo_factory.html  patch_cell10_v26.py  patch_v27.py  patch_v28.py  pyproject.toml  update_cell1.py
configs/: hardware_profile.yaml  seeds.yaml
docs/: ATTRIBUTIONS.md  PROJECT_PLAN.md  report.tex
notebooks/: compile_report.ipynb  kernel-metadata.json  phase1_baseline.ipynb  phase2_compression.ipynb  phase3_evaluation.ipynb  phase3_quickeval.ipynb  phase4_mujoco_viz.ipynb  phase5_pennylane.ipynb
results/: ablation.json  baseline_metrics.json  compression_sweep_stats.json  eval_summary.json  pareto_data.json  pennylane_feasibility.json
scripts/: compress_model.py  fill_report.py  generate_demo_eval.py  kaggle_run.sh  kaggle_run_phase3.sh  kaggle_run_phase4.sh  kaggle_run_quickeval.sh  kaggle_run_report.sh  make_synthetic_trajectory.py  run_baseline.py  run_eval.py  visualize.py
src/vlam_compress/: compress.py  metrics.py  mujoco_bridge.py
